ajout est correction des liens dans tout les sites

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>           
             <div class="divdrapeaux">
                 <a class="" href="france.html"><img class="france" src="media/img/France.png" alt="france"></a>
-                <a class="" href="grèce.html"><img class="france" src="media/img/grece.png" alt="grece"></a>
+                <a class="" href="grece.html"><img class="france" src="media/img/grece.png" alt="grece"></a>
                 <a class="" href="japon.html"><img  class="france" src="media/img/ja.png" alt="japon"></a>
                 <a class="" href="polynesie.html"><img class="france" src="media/img/poly.png" alt="poly"></a>
                 <a class="" href="salvador.html"><img class="france" src="media/img/salvador.png" alt=""></a>              
@@ -190,10 +190,10 @@
                 <h3>Wanderers</h3>
                 <ul>
                     <li><a href="france.html">Félix</a></li>
-                    <li><a href="">Fériale</a></li>
+                    <li><a href="polynesie.html">Fériale</a></li>
                     <li><a href="japon.html">Ibni</a></li>
                     <li><a href="salvador.html">Jérôme</a></li>
-                    <li><a href="grèce.html">Joris</a></li>
+                    <li><a href="grece.html">Joris</a></li>
                 </ul>
             </div>
             <div id="contact" class="footer-right">
