--- a/japon.html
+++ b/japon.html
@@ -32,7 +32,7 @@
                             <li><a href="polynesie.html">Fériale</a></li>
                             <li><a href="japon.html">Ibni</a></li>
                             <li><a href="salvador.html">Jérôme</a></li>
-                            <li><a href="grèce.html">Joris</a></li>
+                            <li><a href="grece.html">Joris</a></li>
                         </ul>
                     </li>
                     <li><a href="#contact">Contact</a></li>
@@ -558,10 +558,10 @@
                 <h3>Wanderers</h3>
                 <ul>
                     <li><a href="france.html">Félix</a></li>
-                    <li><a href="">Fériale</a></li>
+                    <li><a href="polynesie.html">Fériale</a></li>
                     <li><a href="japon.html">Ibni</a></li>
                     <li><a href="salvador.html">Jérôme</a></li>
-                    <li><a href="grèce.html">Joris</a></li>
+                    <li><a href="grece.html">Joris</a></li>
                 </ul>
             </div>
             <div id="contact" class="footer-right">
