--- a/polynesie.html
+++ b/polynesie.html
@@ -19,10 +19,10 @@
                         <a href="#">Wanderers</a>
                         <ul class="sous-menu">
                             <li><a class="btn-transition" href="france.html">Félix</a></li>
-                            <li><a class="btn-transition" href="france.html">Fériale</a></li>
-                            <li><a class="btn-transition" href="france.html">Ibni</a></li>
-                            <li><a class="btn-transition" href="france.html">Jérôme</a></li>
-                            <li><a class="btn-transition" href="france.html">Joris</a></li>
+                            <li><a class="btn-transition" href="polynesie.html">Fériale</a></li>
+                            <li><a class="btn-transition" href="japon.html">Ibni</a></li>
+                            <li><a class="btn-transition" href="salvador.html">Jérôme</a></li>
+                            <li><a class="btn-transition" href="grece">Joris</a></li>
                         </ul>
                     </li>
                     <li class="menu-deroulant">
@@ -219,10 +219,10 @@ De la pension de famille de Taha'a, verdoyante île escarpée, au resort de la c
                 <h3>Wanderers</h3>
                 <ul>
                     <li><a href="france.html">Félix</a></li>
-                    <li><a href="">Fériale</a></li>
+                    <li><a href="#">Fériale</a></li>
                     <li><a href="japon.html">Ibni</a></li>
                     <li><a href="salvador.html">Jérôme</a></li>
-                    <li><a href="grèce.html">Joris</a></li>
+                    <li><a href="grece.html">Joris</a></li>
                 </ul>
             </div>
             <div id="contact" class="footer-right">
