--- a/france.html
+++ b/france.html
@@ -24,7 +24,7 @@
                             <li><a class="btn-transition" href="polynesie.html">Fériale</a></li>
                             <li><a class="btn-transition" href="japon.html">Ibni</a></li>
                             <li><a class="btn-transition" href="salvador.html">Jérôme</a></li>
-                            <li><a class="btn-transition" href="grece.html">Joris</a></li>
+                            <li><a class="btn-transition" href="grèce.html">Joris</a></li>
                         </ul>
                     </li>
                     <li class="menu-deroulant">
@@ -121,10 +121,10 @@
                 <h3>Wanderers</h3>
                 <ul>
                     <li><a href="france.html">Félix</a></li>
-                    <li><a href="">Fériale</a></li>
+                    <li><a href="polynesie.html">Fériale</a></li>
                     <li><a href="japon.html">Ibni</a></li>
                     <li><a href="salvador.html">Jérôme</a></li>
-                    <li><a href="grèce.html">Joris</a></li>
+                    <li><a href="grece.html">Joris</a></li>
                 </ul>
             </div>
             <div id="contact" class="footer-right">
