correction du lien grece sur index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <li><a class="btn-transition" href="polynesie.html">Fériale</a></li>
                             <li><a class="btn-transition" href="japon.html">Ibni</a></li>
                             <li><a class="btn-transition" href="salvador.html">Jérôme</a></li>
-                            <li><a class="btn-transition" href="grèce.html">Joris</a></li>
+                            <li><a class="btn-transition" href="grece.html">Joris</a></li>
                         </ul>
                     </li>
                     <li class="menu-deroulant">
